Closed Bug 1818530 Opened 7 months ago Closed 7 months ago

Broken tab sharing on Wayland

Categories

(Core :: Widget: Gtk, defect)

defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox112 --- fixed

People

(Reporter: jgrulich, Assigned: jgrulich)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/110.0.0.0 Safari/537.36

Steps to reproduce:

It is not possible to share a tab on Wayland. There are actually couple of issues:

  1. It is not possible to share a tab as the list in the picker is created in a way that there is supposed to be only one option.
  2. A wrong capturer type is created for tab sharing (my fault)
  3. We assume that tab/browser sharing will use OS dialog

Do not specify that browser/tab sharing will be using OS prompt because
xdg-desktop-portal has no information about the browser and its tabs.
Also do mot make the xdg-desktop-portal placehoder as the only item on
the list in the picker, because we want to see tabs there and these can
also show previews, which were completely disabled if PipeWire is used.
Lastly avoid creating wrong capturer when tabs are being shared.

Assignee: nobody → grulja
Attachment #9319483 - Attachment description: WIP: Bug 1818530 - Fix tab sharing on Wayland → Bug 1818530 - Fix tab sharing on Wayland
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Widget: Gtk
Product: Firefox → Core
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/1c7935836383
Fix tab sharing on Wayland r=ng,jib
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
QA Whiteboard: [qa-112b-p2]
You need to log in before you can comment on or make changes to this bug.