Bug 1818530 - Fix tab sharing on Wayland r=ng,jib

Do not specify that browser/tab sharing will be using OS prompt because
xdg-desktop-portal has no information about the browser and its tabs.
Also do not make the xdg-desktop-portal placeholder as the only item on
the list in the picker, because we want to see tabs there and these can
also show previews, which were completely disabled if PipeWire is used.
Lastly avoid creating wrong capturer when tabs are being shared.

Differential Revision: https://phabricator.services.mozilla.com/D170765