dom/media/webrtc/MediaEngineWebRTC.cpp
@@ -64,8 +64,7 @@ void MediaEngineWebRTC::EnumerateVideoDevices(
       webrtc::DesktopCapturer::IsRunningUnderWayland() &&
       (aMediaSource == MediaSourceEnum::Application ||
        aMediaSource == MediaSourceEnum::Screen ||
-       aMediaSource == MediaSourceEnum::Window ||
-       aMediaSource == MediaSourceEnum::Browser);
+       aMediaSource == MediaSourceEnum::Window);
 #else
   bool canRequestOsLevelPrompt = false;
 #endif
